deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poultry-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poultry-app
  template:
    metadata:
      labels:
        app: poultry-app
    spec:
      containers:
        - name: poultry-app
          image: himasrikeerthi/poultry-app:latest
          ports:
            - containerPort: 8080
