poultry-deploy-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poultry-app-deployment
  labels:
    app: poultry-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poultry-app
  template:
    metadata:
      labels:
        app: poultry-app
    spec:
      containers:
        - name: poultry-app-container
          image: himasrikeerthi/poultry-app:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: poultry-app-service
spec:
  type: NodePort
  selector:
    app: poultry-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30009
