service.yml
apiVersion: v1
kind: Service
metadata:
  name: poultry-service
spec:
  type: NodePort
  selector:
    app: poultry-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
