ingress1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poultry-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: poultry-app-service
                port:
                  number: 80

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: poultry-app-service
                port:
                  number: 80

          - path: /images
            pathType: Prefix
            backend:
              service:
                name: poultry-app-service
                port:
                  number: 80
